<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.shoppingcart.ShoppingCartActivity">

    <include
        layout="@layout/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewFlipper
        android:id="@+id/shopping_cart_vf_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:animateFirstView="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/shopping_cart_tv_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="@string/shopping_cart_tv_items" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shopping_cart_rv_products"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:itemCount="4"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/item_product" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_cart_tv_total_label"
                    android:textColor="@color/darkGray"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/shopping_cart_tv_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shopping_cart_tv_total_value"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_cart_tv_subtotal_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/shopping_cart_tv_subtotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shopping_cart_tv_subtotal_value"
                    android:textAlignment="textEnd"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_cart_tv_shipping_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/shopping_cart_tv_shipping"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shopping_cart_tv_shipping_value"
                    android:textAlignment="textEnd"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_cart_tv_tax_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/shopping_cart_tv_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shopping_cart_tv_tax_value"
                    android:textAlignment="textEnd"
                    android:textColor="@color/darkGray"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/shopping_cart_tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>